@@ -1,3 +1,8 @@
+2008-05-11  Tim-Philipp Müller  <tim.muller at collabora co uk>
+
+	* gst-libs/gst/pbutils/install-plugins.c:
+	  Fix docs: type and missing word.
+
 2008-05-10  Tim-Philipp Müller  <tim.muller at collabora co uk>
 
 	* gst/typefind/gsttypefindfunctions.c: (h264_video_type_find):
